Bug Fix: Horizontal Scroller
- Fixes .css for hiding the left and right arrows by moving .css into the module code.
- Makes the width and height of the scroller adjustable via admin which will allow store with different sized image to display correctly.

--- a/2.1/catalog/templates/fallback/scrollable.css
+++ b/2.1/catalog/templates/fallback/scrollable.css
@@ -1,43 +1,13 @@
-.scrollable, .scrollable_ap {
-
-	/* required settings */
-	position:relative;
-	overflow:hidden;
-	width: 590px;
-	height:160px;
-	float:left;
-}
-
-.scrollable .items, .scrollable_ap .items_ap {
-	/* this cannot be too large */
-	width:20000em;
-	position:absolute;
-	clear:both;
-
-}
-
-.items div, .items_ap div {
-	float:left;
-	width:590px; /* must match the width of .scrollable */
-}
-
+/* NOTE: Some settings for scrollable are controlled through admin panel */
+.scrollable, .scrollable_ap { position:relative; overflow:hidden; float:left; }
+.scrollable .items, .scrollable_ap .items_ap { width:20000em; position:absolute; clear:both; }
+.items div, .items_ap div { float:left; width:590px; }
 
 /* prev, next, prevPage and nextPage buttons */
-a.browse, a.browse_ap {
-	background:url(images/hori_large.png) no-repeat scroll 0 0 transparent;
-	display:block;
-	width:24px;
-	height:56px;
-	float:left;
-	margin:52px 0px; /* Set the 62 to height of scroller - 56 / 2;  */
-	cursor:pointer;
-	font-size:1px;
-	}
-
+a.browse, a.browse_ap { background:url(images/hori_large.png) no-repeat scroll 0 0 transparent;	display:block; width:24px; height:56px; float:left; cursor:pointer; font-size:1px; }
 a.right, a.right_ap{background-position:0 -56px;clear:right;margin-right:0px;}
 a.right:hover, a.right_ap:hover{background-position:-24px -56px}
 a.right:active, a.right_ap:active{background-position:-48px -56px}
-
 a.left, a.left_ap{margin-left:1px}
 a.left:hover, a.left_ap:hover{background-position:-24px 0}
 a.left:active, a.left_ap:active{background-position:-48px 0}
